# rusty_mandelbrot

./: Cargo.toml  LICENSE  README
.circleci/: config.yml
src/: aa.rs  cnum.rs  main.rs  mandelbrot.rs
