[package]
name = "rusty_mandelbrot"
version = "0.1.0"
authors = ["Bernardo Rodrigues <bernardocrodrigues@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scoped_threadpool="0.1.6"
pixels = "0.0.2"
winit = "0.22.0"
winit_input_helper = "0.4.0"
env_logger = "0.7.1"
log = "0.4"