[package]
name = "rusty_mandelbrot"
version = "0.1.0"
authors = ["Bernardo Rodrigues <bernardocrodrigues@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scoped_threadpool = "0.1.9"
num_cpus = "1.12.0"
pixels = "0.0.2"
winit = "0.22.0"